--- a/src/pages/DroneControl.scss
+++ b/src/pages/DroneControl.scss
@@ -4,13 +4,14 @@ $font-size: 16px;
 
 .container {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   
   .header {
     font-size: $font-size;
     color: $primary-color;
   }
-  
+  .imgdiv{
+  }
   .footer {
     font-size: $font-size;
     color: $secondary-color;
